--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -155,49 +155,19 @@
                             <li class="minicart-wrap">
                                 <a href="#" class="minicart-btn toolbar-btn">
                                     <i class="fa fa-shopping-cart"></i>
-                                    <span class="cart-item_count">3</span>
+                                    <span class="cart-item_count" th:text="${items}"></span>
                                 </a>
                                 <div class="cart-item-wrapper dropdown-sidemenu dropdown-hover-2">
-                                    <div class="single-cart-item">
+                                    <div class="single-cart-item" th:each="prod : ${myProd}">
                                         <div class="cart-img">
-                                            <a href="cart"><img src="assets/images/cart/1.jpg" alt=""></a>
+                                            <a href="cart"><img th:src="${prod.image}" alt=""></a>
                                         </div>
                                         <div class="cart-text">
-                                            <h5 class="title"><a href="cart">Odio tortor consequat</a></h5>
+                                            <h5 class="title"><a href="cart" th:text="${prod.name}"></a></h5>
                                             <div class="cart-text-btn">
                                                 <div class="cart-qty">
-                                                    <span>1×</span>
-                                                    <span class="cart-price">$98.00</span>
-                                                </div>
-                                                <button type="button"><i class="ion-trash-b"></i></button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="single-cart-item">
-                                        <div class="cart-img">
-                                            <a href="cart"><img src="assets/images/cart/2.jpg" alt=""></a>
-                                        </div>
-                                        <div class="cart-text">
-                                            <h5 class="title"><a href="cart">Integer eget augue</a></h5>
-                                            <div class="cart-text-btn">
-                                                <div class="cart-qty">
-                                                    <span>1×</span>
-                                                    <span class="cart-price">$98.00</span>
-                                                </div>
-                                                <button type="button"><i class="ion-trash-b"></i></button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="single-cart-item">
-                                        <div class="cart-img">
-                                            <a href="cart"><img src="assets/images/cart/3.jpg" alt=""></a>
-                                        </div>
-                                        <div class="cart-text">
-                                            <h5 class="title"><a href="cart">Eleifend quam</a></h5>
-                                            <div class="cart-text-btn">
-                                                <div class="cart-qty">
-                                                    <span>1×</span>
-                                                    <span class="cart-price">$98.00</span>
+                                                    <span>1x</span>
+                                                    <span class="cart-price" th:text="'$' + ${prod.price}"></span>
                                                 </div>
                                                 <button type="button"><i class="ion-trash-b"></i></button>
                                             </div>
@@ -205,10 +175,13 @@
                                     </div>
                                     <div class="cart-price-total d-flex justify-content-between">
                                         <h5>Total :</h5>
-                                        <h5>$166.00</h5>
+                                        <h5 th:text="'$' + ${totalPrice}"></h5>
                                     </div>
                                     <div class="cart-links d-flex justify-content-between">
-                                        <a class="btn product-cart button-icon flosun-button dark-btn" href="cart">View cart</a>
+                                        <form th:action="'/cart/' + ${user.id}" method="post">
+<!--                                        <a class="btn product-cart button-icon flosun-button dark-btn" href="cart">View cart</a>-->
+                                            <button type="submit" class="btn product-cart button-icon flosun-button dark-btn">View cart</button>
+                                        </form>
                                         <a class="btn flosun-button secondary-btn rounded-0" href="checkout">Checkout</a>
                                     </div>
                                 </div>
@@ -506,9 +479,7 @@
                             <div class="single-product position-relative mr-0 ml-0">
                                 <div class="product-image">
                                     <a class="d-block" href="product-details">
-                                        <img src="assets/images/product/1.png" alt="" class="product-image-1 w-100">
-                                        <img src="assets/images/product/1.png" alt=""
-                                             class="product-image-2 position-absolute w-100">
+                                        <img th:src="${el.image}" width="400" height="400" alt="" class="product-image-1 w-100">
                                     </a>
                                     <span class="onsale">Sale!</span>
                                     <div class="add-action d-flex flex-column position-absolute">
@@ -542,7 +513,10 @@
                                         <span class="regular-price " th:text="'$' + ${el.price}"></span>
                                         <span class="old-price"><del th:text="'$' + ${el.price}"></del></span>
                                     </div>
-                                    <a href="cart" class="btn product-cart">Add to Cart</a>
+                                    <form th:action="'/add-product/' + ${el.id}" method="post">
+<!--                                    <a href="cart" class="btn product-cart">Add to Cart</a>-->
+                                        <button type="submit" class="btn product-cart">Add to Cart</button>
+                                    </form>
                                 </div>
                                 <div class="product-content-listview">
                                     <div class="product-title">
