--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -473,16 +473,10 @@
                         </div>
                         <form action="#" method="post">
                             <div class="single-input-item mb-3">
-                                <input type="text" placeholder="First Name">
+                                <input type="text" name="username" placeholder="Email or Username">
                             </div>
                             <div class="single-input-item mb-3">
-                                <input type="text" placeholder="Last Name">
-                            </div>
-                            <div class="single-input-item mb-3">
-                                <input type="email" placeholder="Email or Username">
-                            </div>
-                            <div class="single-input-item mb-3">
-                                <input type="password" placeholder="Enter your Password">
+                                <input type="password" name="password" placeholder="Enter your Password">
                             </div>
                             <div class="single-input-item mb-3">
                                 <div class="login-reg-form-meta d-flex align-items-center justify-content-between">
