--- a/src/main/resources/templates/create-product.html
+++ b/src/main/resources/templates/create-product.html
@@ -56,18 +56,21 @@
                             </div>
                         </div>
                     </div>
-
-
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="form_message">Описание товара</label>
-                                <textarea id="form_message" name="description" class="form-control" placeholder="Описание" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                                <textarea id="form_message" name="description" class="form-control" placeholder="Описание" rows="2" required="required" data-error="Please,leave us a message."></textarea>
                                 <div class="help-block with-errors"></div>
                             </div>
                         </div>
-
-
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="form_message">Полное Описание товара</label>
+                                <textarea id="form_descrip" name="descrip" class="form-control" placeholder="Полное Описание" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                                <div class="help-block with-errors"></div>
+                            </div>
+                        </div>
 
                         <div class="col-md-12">
                             <div class="form-group">
