--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -316,7 +316,7 @@
                                 <div class="col-md-12 col-custom">
                                     <div class="country-select clearfix">
                                         <label>Country <span class="required">*</span></label>
-                                        <select class="myniceselect nice-select wide rounded-0">
+                                        <select class="myniceselect nice-select wide rounded-0" required>
                                             <option data-display="Bangladesh">USA</option>
                                             <option value="uk">England</option>
                                             <option value="rou">United Arab Emirates</option>
@@ -329,19 +329,19 @@
                                 <div class="col-md-6 col-custom">
                                     <div class="checkout-form-list">
                                         <label>First Name <span class="required">*</span></label>
-                                        <input placeholder="" type="text">
+                                        <input placeholder="" type="text" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-custom">
                                     <div class="checkout-form-list">
                                         <label>Last Name <span class="required">*</span></label>
-                                        <input placeholder="" type="text">
+                                        <input placeholder="" type="text" required>
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-custom">
                                     <div class="checkout-form-list">
                                         <label>Address <span class="required">*</span></label>
-                                        <input placeholder="Street address" type="text">
+                                        <input placeholder="Street address" type="text" required>
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-custom">
@@ -352,19 +352,19 @@
                                 <div class="col-md-12 col-custom">
                                     <div class="checkout-form-list">
                                         <label>Town / City <span class="required">*</span></label>
-                                        <input type="text">
+                                        <input type="text" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-custom">
                                     <div class="checkout-form-list">
                                         <label>State / County <span class="required">*</span></label>
-                                        <input placeholder="" type="text">
+                                        <input placeholder="" type="text" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-custom">
                                     <div class="checkout-form-list">
                                         <label>Phone <span class="required">*</span></label>
-                                        <input type="text">
+                                        <input type="text" required>
                                     </div>
                                 </div>
                             </div>
@@ -373,7 +373,7 @@
                                     <div class="col-md-12 col-custom">
                                         <div class="myniceselect country-select clearfix">
                                             <label>Country <span class="required">*</span></label>
-                                            <select class="myniceselect nice-select wide rounded-0">
+                                            <select class="myniceselect nice-select wide rounded-0" required>
                                                 <option data-display="Bangladesh">USA</option>
                                                 <option value="uk">England</option>
                                                 <option value="rou">United Arab Emirates</option>
@@ -386,48 +386,48 @@
                                     <div class="col-md-12 col-custom">
                                         <div class="checkout-form-list">
                                             <label>First Name <span class="required">*</span></label>
-                                            <input placeholder="" type="text">
+                                            <input placeholder="" type="text" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="checkout-form-list">
                                             <label>Last Name <span class="required">*</span></label>
-                                            <input placeholder="" type="text">
+                                            <input placeholder="" type="text" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="checkout-form-list">
                                             <label>Address <span class="required">*</span></label>
-                                            <input placeholder="Street address" type="text">
+                                            <input placeholder="Street address" type="text" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="checkout-form-list">
-                                            <input placeholder="Apartment, suite, unit etc. (optional)" type="text">
+                                            <input placeholder="Apartment, suite, unit etc. (optional)" type="text" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="checkout-form-list">
                                             <label>Town / City <span class="required">*</span></label>
-                                            <input type="text">
+                                            <input type="text" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="checkout-form-list">
                                             <label>State / County <span class="required">*</span></label>
-                                            <input placeholder="" type="text">
+                                            <input placeholder="" type="text" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="checkout-form-list">
                                             <label>Email Address <span class="required">*</span></label>
-                                            <input placeholder="" type="email">
+                                            <input placeholder="" type="email" required>
                                         </div>
                                     </div>
                                     <div class="col-md-12 col-custom">
                                         <div class="checkout-form-list">
                                             <label>Phone <span class="required">*</span></label>
-                                            <input type="text">
+                                            <input type="text" required>
                                         </div>
                                     </div>
                                 </div>
